--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    <div Class="Aboutme">
    		<div class="About me">
         	<h2>About me </h2>
-        		<p align="center"> I am a junior at <b>Stonington 			 				highschool</b>. I like sports, I play <em><b>                football</b></em> and I like things computer                related but at the sametime I hate computer                things. </P> 
+        		<p align="center"> I am a junior at <b>Stonington 			 				highschool</b>. I like sports, I like things 		                computer related but at the sametime I hate                 computer things. </P> 
         </div>
   </div>
   <div class="contact">
