--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="container">
 			<h1> Brandon Granger </h1>
             	<ul>
-               	    <li><a href="www.brandon20123.github.io/Myschedule.html">Class schedule </a></li>
+               	    <li><a href="Myschedule.html">Class schedule </a></li>
                     <li><a href="#"> Summer vacation </a></li>
                     <li><a href="#"> My Future </a></li>
                     <li><a href="#"> Quotes </a></li>
