--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 </head>
 
 <body>
-	<div class="header">
+    <div class="header">
 		<div class="container">
 			<h1> Brandon Granger </h1>
             	<ul>
                	    <li><a href="Myschedule.html">Class schedule </a></li>
+               	    <li><a href="pages/mydreamvacation.html">My Dream Vacation</a></li>
+                    <li><a href="pages/myfuture.html"> My Future</a></li>
                     <li><a href="#"> Summer vacation </a></li>
                     <li><a href="#"> My Future </a></li>
                     <li><a href="#"> Quotes </a></li>
