--- a/Pages/mydreamvacation.html
+++ b/Pages/mydreamvacation.html
@@ -2,10 +2,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-<link href="file:///C|/Brandon Granger/stylesheet.css" rel="stylesheet" type="text/css" />
-</head>
+<title>Future</title>
+<link href="../stylesheets/stylesheet.css" rel="stylesheet" type="text/css" />
+</head> 
+<div class="header">
+		<div class="container">
+			<h1> My Future </h1>
+</div>
 
 <body>
+<div Class="Aboutme">
+  <div class="Vacation">
+    <h2>Vacation</h2>
+    <p>&nbsp;</p>
+    <p><img src="../images/picture-vaca.jpg" width="286" height="174" /></p>
+       	   <p></P> 
+    </div>
+</div>
 </body>
 </html>
