--- a/Pages/myfuture.html
+++ b/Pages/myfuture.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Future</title>
-<link href="file:///C|/Brandon Granger/stylesheet.css" rel="stylesheet" type="text/css" />
+<link href="../stylesheets/stylesheet.css" rel="stylesheet" type="text/css" />
 </head> 
 <div class="header">
 		<div class="container">
@@ -14,8 +14,8 @@
 <div Class="Aboutme">
    		<div class="Job">
         	<h2>Job </h2>
-            
-        		 <p>the Job I want in my future is to join the Navy and go to college and become an officer of the navy to captain battleships or smaller ships within the navy</P> 
+            <img src= "../images/logo-navy.png" width="117" height="93" />
+        		 <p>the Job I want is to join the NAVY I want to be an officer of a ship, I'm joing to join the NAVY and then go college to become an officer, My dream is to captain battleships or destroyers.</P> 
         </div>
   </div>
 </body>
