--- a/Pages/Myschedule.html
+++ b/Pages/Myschedule.html
@@ -6,15 +6,25 @@
 <link href="../stylesheets/stylesheet.css" rel="stylesheet" type="text/css" />
 </head>
 <style> 
-td{ border:solid;}
+td{
+	border: solid;
+	color: #FFF;
+}
 </style>
+
+<div class="header">
+	<div class="container">
+		<h1> My Schedule </h1>
+    </div>
+</div>
+
 <body>
 
 <table>
 	<tbody style="border:solid;">
 
           <tr>
-          	<th colspan="5"> Brandons schedule</th>
+          	<th colspan="5"></th>
           </tr>
           <tr>
           	<td rowspan="2">O</td>
