--- a/Pages/mydreamvacation.html
+++ b/Pages/mydreamvacation.html
@@ -11,12 +11,12 @@
 </div>
 
 <body>
-<div Class="Aboutme">
+<div Class="Vacation">
   <div class="Vacation">
     <h2>Vacation</h2>
     <p>&nbsp;</p>
     <p><img src="../images/picture-vaca.jpg" width="286" height="174" /></p>
-       	   <p></P> 
+       	   <p>My dream vacation is to stay at a resort on a tropcial island, where there is palm tress and clear light blue ocean. </P> 
     </div>
 </div>
 </body>
