--- a/Pages/myfuture.html
+++ b/Pages/myfuture.html
@@ -6,12 +6,11 @@
 <link href="../stylesheets/stylesheet.css" rel="stylesheet" type="text/css" />
 </head> 
 <div class="header">
-		<div class="container">
 			<h1> My Future </h1>
 </div>
 
 <body>
-<div Class="Aboutme">
+<div Class="myfuture">
    		<div class="Job">
         	<h2>Job </h2>
             <img src= "../images/logo-navy.png" width="117" height="93" />
