--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                	    <li><a href="Myschedule.html">Class schedule </a></li>
                	    <li><a href="pages/mydreamvacation.html">My Dream 			Vacation</a></li>
                     <li><a href="pages/myfuture.html"> My Future</a></li>
-                    <li><a href="#"> Summer vacation </a></li>
-                    <li><a href="#"> My Future </a></li>
-                    <li><a href="#"> Quotes </a></li>
-                    <li><a href="#"> Interests </a></li>
+                    <li><a href="pages/mydreamvacation.html"> My Dream Vacation </a></li>
+                    <li><a href="pages/myfuture.html"> My Future </a></li>
+                    <li><a href="pages/quotes.html"> Quotes </a></li>
+                    <li><a href="pages/interests.html"> Interests </a></li>
                 </ul>	
         </div>
    </div>
