--- a/Pages/mydreamvacation.html
+++ b/Pages/mydreamvacation.html
@@ -8,6 +8,15 @@
 <div class="header">
 		<div class="container">
 			<h1> My Future </h1>
+            <ul>
+               	    <li><a href="/pages/Myschedule.html">Class schedule </a></li>
+               	    <li><a href="/pages/mydreamvacation.html">My Dream 			Vacation</a></li>
+                    <li><a href="/pages/myfuture.html"> My Future</a></li>
+                    <li><a href="/pages/mydreamvacation.html"> My Dream Vacation </a></li>
+                    <li><a href="/pages/myfuture.html"> My Future </a></li>
+                    <li><a href="pages/quotes.html"> Quotes </a></li>
+                    <li><a href="pages/interests.html"> Interests </a></li>
+                </ul>	
 </div>
 
 <body>
