--- a/Pages/quotes.html
+++ b/Pages/quotes.html
@@ -7,6 +7,15 @@
 </head> 
 <div class="header">
 			<h1>Quotes</h1>
+            <ul>
+               	    <li><a href="/pages/Myschedule.html">Class schedule </a></li>
+               	    <li><a href="/pages/mydreamvacation.html">My Dream 			Vacation</a></li>
+                    <li><a href="/pages/myfuture.html"> My Future</a></li>
+                    <li><a href="/pages/mydreamvacation.html"> My Dream Vacation </a></li>
+                    <li><a href="/pages/myfuture.html"> My Future </a></li>
+                    <li><a href="pages/quotes.html"> Quotes </a></li>
+                    <li><a href="pages/interests.html"> Interests </a></li>
+                </ul>	
 </div>
 
 <body>
