--- a/Pages/Myschedule.html
+++ b/Pages/Myschedule.html
@@ -15,6 +15,15 @@ td{
 <div class="header">
 	<div class="container">
 		<h1> My Schedule </h1>
+        <ul>
+               	    <li><a href="/pages/Myschedule.html">Class schedule </a></li>
+               	    <li><a href="/pages/mydreamvacation.html">My Dream 			Vacation</a></li>
+                    <li><a href="/pages/myfuture.html"> My Future</a></li>
+                    <li><a href="/pages/mydreamvacation.html"> My Dream Vacation </a></li>
+                    <li><a href="/pages/myfuture.html"> My Future </a></li>
+                    <li><a href="pages/quotes.html"> Quotes </a></li>
+                    <li><a href="pages/interests.html"> Interests </a></li>
+                </ul>	
     </div>
 </div>
 
