--- a/Pages/Myschedule.html
+++ b/Pages/Myschedule.html
@@ -16,13 +16,15 @@ td{
 	<div class="container">
 		<h1> My Schedule </h1>
         <ul>
-               	    <li><a href="/pages/Myschedule.html">Class schedule </a></li>
-               	    <li><a href="/pages/mydreamvacation.html">My Dream 			Vacation</a></li>
-                    <li><a href="/pages/myfuture.html"> My Future</a></li>
-                    <li><a href="/pages/mydreamvacation.html"> My Dream Vacation </a></li>
-                    <li><a href="/pages/myfuture.html"> My Future </a></li>
-                    <li><a href="pages/quotes.html"> Quotes </a></li>
-                    <li><a href="pages/interests.html"> Interests </a></li>
+               	    <li><a href="../index.html"> Home</a></li>
+                    <li><a href="Myschedule.html">Class schedule </a></li>
+               	    <li><a href="mydreamvacation.html">My Dream 			Vacation</a></li>
+                    <li><a href="myfuture.html"> My Future</a></li>
+                    <li><a href="mydreamvacation.html"> My Dream Vacation </a></li>
+                    <li><a href="myfuture.html"> My Future </a></li>
+                    <li><a href="quotes.html"> Quotes </a></li>
+                    <li><a href="interests.html"> Interests </a></li>
+                </ul>         <li><a href="pages/interests.html"> Interests </a></li>
                 </ul>	
     </div>
 </div>
