--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 		<div class="container">
 			<h1> Brandon Granger </h1>
             	<ul>
-               	    <li><a href="/Pages/Myschedule.html">Class schedule </a></li>
-               	    <li><a href="/Pages/mydreamvacation.html">My Dream 			Vacation</a></li>
-                    <li><a href="/Pages/myfuture.html"> My Future</a></li>
-                    <li><a href="/Pages/mydreamvacation.html"> My Dream Vacation </a></li>
-                    <li><a href="/Pages/myfuture.html"> My Future </a></li>
-                    <li><a href="Pages/quotes.html"> Quotes </a></li>
-                    <li><a href="Pages/interests.html"> Interests </a></li>
+               	    <li><a href="../index.html"> Home</a></li>
+                    <li><a href="/pages/Myschedule.html">Class schedule </a></li>
+               	    <li><a href="/pages/mydreamvacation.html">My Dream 			Vacation</a></li>
+                    <li><a href="/pages/myfuture.html"> My Future</a></li>
+                    <li><a href="/pages/mydreamvacation.html"> My Dream Vacation </a></li>
+                    <li><a href="/pages/myfuture.html"> My Future </a></li>
+                    <li><a href="pages/quotes.html"> Quotes </a></li>
+                    <li><a href="pages/interests.html"> Interests </a></li>
                 </ul>	
         </div>
    </div>
