--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
 		<div class="container">
 			<h1> Brandon Granger </h1>
             	<ul>
-               	    <li><a href="../index.html"> Home</a></li>
+               	    <li><a href="index.html"> Home</a></li>
                     <li><a href="/Pages/Myschedule.html">Class schedule </a></li>
-               	    <li><a href="/Pages/mydreamvacation.html">My Dream 			Vacation</a></li>
-                    <li><a href="/Pages/myfuture.html"> My Future</a></li>
                     <li><a href="/Pages/mydreamvacation.html"> My Dream Vacation </a></li>
                     <li><a href="/Pages/myfuture.html"> My Future </a></li>
                     <li><a href="/Pages/quotes.html"> Quotes </a></li>
                     <li><a href="/Pages/interests.html"> Interests </a></li>
-                </ul>	
+                </ul>		
         </div>
    </div>
    <div Class="Aboutme">
