--- a/Pages/interests.html
+++ b/Pages/interests.html
@@ -6,14 +6,11 @@
 			<h1>Interests</h1>
             <ul>
                	    <li><a href="../index.html"> Home</a></li>
-                    <li><a href="Myschedule.html">Class schedule </a></li>
-               	    <li><a href="mydreamvacation.html">My Dream 			Vacation</a></li>
-                    <li><a href="myfuture.html"> My Future</a></li>
-                    <li><a href="mydreamvacation.html"> My Dream Vacation </a></li>
-                    <li><a href="myfuture.html"> My Future </a></li>
-                    <li><a href="quotes.html"> Quotes </a></li>
-                    <li><a href="interests.html"> Interests </a></li>
-                </ul>         <li><a href="pages/interests.html"> Interests </a></li>
+                    <li><a href="/Pages/Myschedule.html">Class schedule </a></li>
+                    <li><a href="/Pages/mydreamvacation.html"> My Dream Vacation </a></li>
+                    <li><a href="/Pages/myfuture.html"> My Future </a></li>
+                    <li><a href="Pages/quotes.html"> Quotes </a></li>
+                    <li><a href="Pages/interests.html"> Interests </a></li>
                 </ul>
 </div>
 
